--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
            </div>
         </div>
         <div class="col-md-6 col-xs-12">
-              <img src="code.jpg" class="img-responsive code">
+              <img src="code.JPG" class="img-responsive code">
         </div>
     </div>
 </div>
